[package]
name = "rust_implements_blockchain"
version = "0.1.0"
authors=["Abdullah DÜNDAR"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "myblockchainlib"
path = "src/lib.rs"


[[block]]
name="blockchainblock"
path="src/block.rs"


[dependencies]
hex = "0.4"
crypto-hash = "0.3.4"
